# ai-interview

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/: .env  main.py  pyproject.toml
backend/agents/interview/: hr.py  state.py
backend/common/: __init__.py  response.py
backend/core/: __init__.py  db.py  logger.py  setting.py
backend/infra/: __init__.py
backend/infra/db/: __init__.py  minio.py  object_storage.py  vector.py
backend/infra/embedding/: __init__.py
backend/infra/memory/: manager.py
backend/infra/memory/strategy/: base.py  long_memory.py  short_memory.py
backend/infra/model/: __init__.py  normal.py
backend/modules/: __init__.py
backend/modules/question_bank/: __init__.py  controller.py  service.py
backend/modules/upload/: __init__.py  controller.py  service.py
infra/: __init__.py
infra/db/: __init__.py  cache.py  kv.py
infra/embedding/: __init__.py  embedding.py
infra/memory/: manager.py
infra/memory/strategy/: long_memory.py  short_memory.py
