[project]
name = "interview-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "python-multipart>=0.0.20",
    "tenacity>=9.1.4",
]
